--- a/ow_plugins/skmobileapp/application/src/pages/user/login/index.scss
+++ b/ow_plugins/skmobileapp/application/src/pages/user/login/index.scss
@@ -103,15 +103,17 @@
                     }                   
                 }
 
-                .sk-facebook-wrap {
+                .sk-firebase {
                     text-align: center;
                     margin-top: auto;
+                    margin-bottom: 2vh;
 
-                    .sk-facebook-label {
+                    &-label {
                         overflow: hidden;
                         color: $sk-login-fb-label-color;
                         font-size: 1.2rem;
                         text-transform: uppercase;
+                        margin-bottom: 1.3rem;
 
                         &:after, &:before {
                             background-color: $sk-login-fb-border-color;
@@ -122,24 +124,36 @@
                             vertical-align: middle;
                             width: 50%;
                             @include position(null, null, null, 0.5rem);
-                            @include margin(null, -50%, null, null)
+                            @include margin(null, -50%, null, null);
                         }
                         &:before {
                             @include position(null, 0.5rem, null, auto);
-                            @include margin(null, 0, null, -50%)
+                            @include margin(null, 0, null, -50%);
                         }
                     }
-                    .sk-facebook {
-                        margin-top: 0;
-                        margin-bottom: 0;
+                    &-button {
+                        margin: 0 0.7rem;
                         width: 4.7rem;
                         height: 4.7rem;
                         min-width: 0;
-                        background: url("../assets/img/custom-images/ic-fb.svg");
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        background-size: 4.7rem;
 
-                        &-button-wrap {
-                            padding-top: 1.5rem;
-                            @include flex(flex, row, center, center);
+                        &[data-firebase-provider="twitter.com"] {
+                            background-image: url("../assets/img/user/login/ic-firebase-twitter.svg");
+                        }
+                        &[data-firebase-provider="facebook.com"] {
+                            background-image: url("../assets/img/user/login/ic-firebase-fb.svg");
+                        }
+                        &[data-firebase-provider="google.com"] {
+                            background-image: url("../assets/img/user/login/ic-firebase-google.svg");
+                        }
+                        &[data-firebase-provider="linkedin.com"] {
+                            background-image: url("../assets/img/user/login/ic-firebase-linkedin.svg");
+                        }
+                        &.sk-firebase-common {
+                            background-image: url("../assets/img/user/login/ic-firebase-common.svg");
                         }
                     }
                 }
