add plugin svideo and add video for index page

--- a/ow_plugins/customindex/views/master_pages/index.html
+++ b/ow_plugins/customindex/views/master_pages/index.html
@@ -27,8 +27,8 @@
                     <div class="user_counter_join">
                         <div class="ow_canvas clearfix">
                             <div class="user_counter_join_block">
-                                <div class="counter">
-                                    {component class='CUSTOMINDEX_CMP_UsersCounter'}
+                                <div class="custom_video">
+                                    {component class='CUSTOMINDEX_CMP_CustomVideo'}
                                 </div>
 
                                 <div class="fb_connect">
@@ -106,54 +106,7 @@
 
                 <div class="ow_canvas clearfix">
                     <div class="stories_carousel stories_carousel_top">
-                        <div id="stories_carousel_selector" class="owl-carousel">
-                            <div class="stories_carousel_slide">
-                                <!--story_slider_pic_1-->
-                                <div class="stories_carousel_item stories_carousel_item_img" style="background-image: url('{text key='slpremiumtheme+story_slider_pic_1'}');">
-                                    <span class="img_title">
-                                        <!--story_slider_pic_text_1-->
-                                        {text key='slpremiumtheme+story_slider_pic_text_1'}
-                                    </span>
-                                </div>
-                                <div class="stories_carousel_item stories_carousel_item_text">
-                                    <div class="title clearfix">
-                                        <!--story_slider_title_1-->
-                                        {text key='slpremiumtheme+story_slider_title_1'}
-                                    </div>
-                                    <div class="read_more clearfix">
-                                        <!--story_slider_read_more_1-->
-                                        {text key='slpremiumtheme+story_slider_read_more_1'}
-                                    </div>
-                                    <div class="text clearfix">
-                                        <!--story_slider_cont_1-->
-                                        {text key='slpremiumtheme+story_slider_cont_1'}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="stories_carousel_slide">
-                                <!--story_slider_pic_2-->
-                                <div class="stories_carousel_item stories_carousel_item_img" style="background-image: url('{text key='slpremiumtheme+story_slider_pic_2'}');">
-                                    <span class="img_title">
-                                        <!--story_slider_pic_text_2-->
-                                        {text key='slpremiumtheme+story_slider_pic_text_2'}
-                                    </span>
-                                </div>
-                                <div class="stories_carousel_item stories_carousel_item_text">
-                                    <div class="title clearfix">
-                                        <!--story_slider_title_2-->
-                                        {text key='slpremiumtheme+story_slider_title_2'}
-                                    </div>
-                                    <div class="read_more clearfix">
-                                        <!--story_slider_read_more_2-->
-                                        {text key='slpremiumtheme+story_slider_read_more_2'}
-                                    </div>
-                                    <div class="text clearfix">
-                                        <!--story_slider_cont_2-->
-                                        {text key='slpremiumtheme+story_slider_cont_2'}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {component class='SVIDEO_CMP_SvideoList'}
                     </div>
                 </div>
 
