--- a/ow_plugins/skmobileapp/application/src/pages/dashboard/components/tabs/index.scss
+++ b/ow_plugins/skmobileapp/application/src/pages/dashboard/components/tabs/index.scss
@@ -16,7 +16,9 @@
                 border-width: 2px;
             }
         }
-
+        &.sk-tabs-conversations {
+            justify-content: flex-end;
+        }
         .sk-tab-ic-active {
             opacity: 0;
             position: absolute;
