update firebase auth

--- a/ow_plugins/firebase_auth/views/controllers/admin_index.html
+++ b/ow_plugins/firebase_auth/views/controllers/admin_index.html
@@ -13,6 +13,13 @@
                         <td class="ow_label">{label name='auth_domain'}</td>
                         <td class="ow_value">{input name='auth_domain'}<br />{error name='auth_domain'}</td>
                     </tr>
+                    <tr class="ow_alt1">
+                        <td class="ow_label">{label name='email_example'}</td>
+                        <td class="ow_value">{input name='email_example'}<br />{error name='email_example'}</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">{text key='firebaseauth+form_email_example_description'}</td>
+                    </tr>
                 </table>
             {/block_decorator}
         </div>
@@ -20,6 +27,7 @@
             {block_decorator name='box' langLabel='firebaseauth+social_networks_label'}
                 <div class="ow_stdmargin">{text key='firebaseauth+social_networks_desc'}</div>
                 {input name='enabled_providers'}
+                <div>{error name='enabled_providers'}</div>
             {/block_decorator}
         </div>
     </div>
