--- a/ow_plugins/firebase_auth/static/css/connect_buttons.css
+++ b/ow_plugins/firebase_auth/static/css/connect_buttons.css
@@ -65,7 +65,12 @@ body .connect_button_cont.clearfix  {
 .firebase-auth-provider[data-provider="linkedin.com"] {
     background-image: url("../img/ic-firebase-auth-linkedin.svg");
 }
-
+.firebaseauth-button[data-provider="instagram.com"],
+.ow.base_sign_in .ow_sign_in .firebaseauth-button[data-provider="instagram.com"],
+.ow.base_sign_in .ow_sign_in .firebaseauth-button[data-provider="instagram.com"]:hover,
+.firebase-auth-provider[data-provider="instagram.com"] {
+    background-image: url("../img/ic-firebase-auth-instagram.svg");
+}
 /* hide console icon */
 .ow_ico_signin.firebaseauth {
     display: none;
@@ -97,37 +102,5 @@ body .connect_button_cont.clearfix  {
 }
 .firebaseauth-form .ow_table_1 td {
     border: none;
-}
-/* end */
-
-/* Z:  Firebase styles for index page -- Platinum Pro */
-.platinum_pro .user_counter_join_block .connect_button_list {
-    width: 100%;
-}
-.platinum_pro .user_counter_join .firebaseauth-auth-wrapper {
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0;
-    justify-content: center;
-}
-.platinum_pro .user_counter_join .firebaseauth-button-wrap {
-    display: block !important;
-    opacity: 1 !important;
-    position: static;
-    width: auto;
-    padding-left: 0;
-}
-.platinum_pro .user_counter_join .firebaseauth-common-button {
-    display: none !important;
-}
-.platinum_pro .user_counter_join .firebaseauth-auth-wrapper .firebaseauth-button {
-    width: 40px;
-    height: 40px;
-}
-/* end */
-
-/* Z:  Firebase styles for Sign In Page -- Turquoise */
-.turquoise.base_sign_in .firebaseauth-auth-wrapper {
-    margin: 0;
 }
 /* end */
